<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cliente"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:hint="@string/client"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/conta"
        app:layout_constraintEnd_toStartOf="@+id/conta"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/conta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/saldo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cliente"
        app:layout_constraintTop_toBottomOf="@+id/rgTypes"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/limiteEDtRendimento"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/limite"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/valor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saldo"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/valor"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/value"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnDepositar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limiteEDtRendimento"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/saldo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/saldo"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/limiteEDtRendimento"
        app:layout_constraintEnd_toStartOf="@+id/conta"
        app:layout_constraintStart_toStartOf="@+id/rgTypes"
        app:layout_constraintTop_toBottomOf="@+id/conta"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:id="@+id/rgTypes"
        android:layout_width="351dp"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbEspecial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_especial" />

        <RadioButton
            android:id="@+id/rbPoupanca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_poupanca" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/author_data"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/result"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDepositar" />

    <Button
        android:id="@+id/btnDepositar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/depositar"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSacar"
        app:layout_constraintTop_toBottomOf="@+id/valor" />

    <Button
        android:id="@+id/btnSacar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="14dp"
        android:text="@string/sacar"
        app:layout_constraintBottom_toBottomOf="@+id/btnDepositar"
        app:layout_constraintEnd_toStartOf="@+id/btnDepositar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDepositar" />

</androidx.constraintlayout.widget.ConstraintLayout>